syntax = "proto3";

service Posts {
  rpc GetPost (GetPostRequest) returns (GetPostResponse) {}
  rpc ListPosts (ListPostsRequest) returns (ListPostsResponse) {}
  rpc BatchGetPosts (BatchGetPostsRequest) returns (BatchGetPostsResponse) {}
  rpc GetAuthor (GetAuthorRequest) returns (GetAuthorResponse) {}
  rpc BatchGetAuthors (BatchGetAuthorsRequest) returns (BatchGetAuthorsResponse) {}
  rpc GetPostForUser (GetPostForUserRequest) returns (GetPostForUserResponse) {}
}

message GetPostRequest {
  string post_id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message ListPostsRequest {}

message ListPostsResponse {
  repeated Post posts = 1;
}

message BatchGetPostsRequest {
  repeated string ids = 1;
}

message BatchGetPostsResponse {
  repeated Post posts = 2;
}

message GetAuthorRequest {
  string id = 1;
}

message GetAuthorResponse {
  Author author = 1;
}

message BatchGetAuthorsRequest {
  repeated string ids = 1;
}

message BatchGetAuthorsResponse {
  repeated Author authors = 2;
}

message GetPostForUserRequest {
  string user_id = 1;
  int32 testing_validation = 2;
}

message GetPostForUserResponse {
  Post post = 1;
}

message Post {
  string id = 1;
  string title = 2;
  string author_id = 3;
}

message Author {
  string id = 1;
  string name = 2;
}
